--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "google-cloud-dialogflow>=2.41.1",
     "python-dotenv>=1.1.0",
     "python-telegram-bot==13.15",
+    "vk-api>=11.9.9",
 ]
